[gd_scene load_steps=3 format=3 uid="uid://iudxjd4f6le1"]

[ext_resource type="Script" path="res://Scripts/GUI/ShopUI.gd" id="1_gmib5"]
[ext_resource type="Texture2D" uid="uid://ttfmygav4w8u" path="res://Assets/SGQ_Dungeon/items/sword_item.png" id="2_pb0hv"]

[node name="Shop" type="CanvasLayer"]
layer = 2
scale = Vector2(4, 4)
transform = Transform2D(4, 0, 0, 4, 0, 0)
script = ExtResource("1_gmib5")

[node name="Panel" type="Panel" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 272.0
offset_bottom = 144.0
metadata/_edit_lock_ = true

[node name="BuyButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 102.0
offset_right = 96.0
offset_bottom = 118.0
theme_override_font_sizes/font_size = 8
text = "buy
"

[node name="SellButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 160.0
offset_top = 102.0
offset_right = 208.0
offset_bottom = 118.0
theme_override_font_sizes/font_size = 8
text = "sell
"

[node name="ExitButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 232.0
offset_top = 8.0
offset_right = 248.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 8
text = "X
"

[node name="ShopItems" type="GridContainer" parent="."]
offset_left = 160.0
offset_top = 48.0
offset_right = 256.0
offset_bottom = 96.0
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 30
columns = 4

[node name="PlayerGold" type="Label" parent="."]
offset_left = 32.0
offset_top = 24.0
offset_right = 96.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 8
text = "test gold"
autowrap_mode = 3

[node name="ItemInfo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 144.0
offset_top = 32.0
offset_right = 144.0
offset_bottom = 32.0

[node name="ItemName" type="Label" parent="ItemInfo"]
layout_mode = 0
offset_left = -96.0
offset_top = 16.0
offset_right = -48.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 8
text = "test item
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemDescription" type="Label" parent="ItemInfo"]
layout_mode = 0
offset_left = -112.0
offset_top = 32.0
offset_right = 16.0
offset_bottom = 78.0
theme_override_font_sizes/font_size = 8
text = "item
description
test
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ItemPrice" type="Label" parent="ItemInfo"]
layout_mode = 0
offset_left = -32.0
offset_top = 16.0
offset_right = 16.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 8
text = "100 gold"
vertical_alignment = 1

[node name="ItemSprite" type="Sprite2D" parent="ItemInfo"]
position = Vector2(-104, 24)
texture = ExtResource("2_pb0hv")

[connection signal="pressed" from="Panel/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="Panel/SellButton" to="." method="_on_sell_button_pressed"]
[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_exit_button_pressed"]
